2000-08-14  Jeff Freedman  <jeff@amy.nerble.net>

	* objs.cc: Lengthed distance in ::find_nearby from 16 to 24 so
	that first metal door in Deceit works.
	* Save/restore flag for being in 'barge' mode.

2000-08-11  Jeff Freedman  <jeff@amy.nerble.net>

	* Several rendering changes.

2000-08-10  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed (I hope) 'hang' bug at end of menu screen.
	* Added 'dependors' field to Game_object.

2000-08-05  Jeff Freedman  <jeff@amy.nerble.net>

	* Moved flags to objs.h.  Set 'okay_to_take' for containers and
	their members.
	* Implemented health-point penalties for hunger poison.

2000-08-04  Tristan Tarrant  <nadir@users.sourceforge.net>

	* game.h, bggame.cc, sigame.cc: add some resources, namely palettes 
	and shape files. Removed the silly get_extra_shape_file()
	* exult.cc, browser.*, gamewin.*: implement a better shape browser.
	Better help screen
	* data/credits.txt: Text for Exult credits
	* tools/txt2cc: Tool which generates a C++ function which returns
	a vector containing all lines in the source text. Used to compile the
	credits and quotes into Exult.
	* game.cc: implement Exult quotes & credits. Return to menu at the
	end of scrolling.

2000-08-03  Tristan Tarrant  <nadir@users.sourceforge.net>

	* bggame.cc: Failed endgame
	* usecode.cc: Show credits after successful endgame. Quit after 
	endgame.

2000-08-03  Tristan Tarrant  <nadir@users.sourceforge.net>

	* bggame.cc, sigame.cc, game.cc: Credits & Quotes

2000-08-03  Tristan Tarrant  <nadir@users.sourceforge.net>

	* bggame.cc, sigame.cc: Implement main menu (SI's is incomplete)
	* gamewin.cc: move creation of 'gamedat' to separate function to 
	be invoked by main menu

2000-08-01  Jeff Freedman  <jeff@amy.nerble.net>

	* Dead bodies decay after several game-clock hours.

2000-08-01  Tristan Tarrant  <nadir@users.sourceforge.net>

	* game.h, gamewin.cc: if in BG we show ENDSHAPE.FLX, if in SI we show 
	PAPERDOL.VGA